# MScProject

./: .gitignore  .gitmodules  PLAN.md  tags-to-weight.txt
apitest/: refresh.py  requestactivities.py
code/: activityList.json
code/data/: connected_apps.csv  following.csv  goals.csv  logins.csv  monthly_recap_achievements.csv  starred_routes.csv
code/go/: visualization.html
code/matching/: get_map_data.py  match.py  requirements.txt
code/pipeline/: .gitignore  1.html  1_d.html  2.html  2_d.html  batch_route_calc.py  docker-compose.yml  interactive_map_Afternoon_Ride.html  (+18 more)
code/segmentation/engine/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.tex  build_and_deploy.sh  compile_commands.json  geojsonthing.json  plan.txt  schema.sql  send_json.sh  signal_lab.js  test.py
code/segmentation/engine/.cache/clangd/index/: CoreTypes.hpp.B2E4329E2214A7DA.idx  OsrmResponse.hpp.3B9289DEC8C9B9E3.idx  RouteSignalBuilder.hpp.DDDD51A6DB17F068.idx  geojson_parser.cpp.0509472C232CDF56.idx  geojson_writer.cpp.5CFFFA0374F2145A.idx  http_handler.cpp.E2171B53D3958AB7.idx  http_handler.hpp.83351BA879649626.idx  httplib.h.77F8B89DDF6A2BAD.idx  json.hpp.9C29BFAF416AD99F.idx  json_debug.hpp.CAC00E71CD277852.idx  json_parser.cpp.18CE3F1A7424C866.idx  json_parser.hpp.C9B05C949F85502C.idx  json_writer.cpp.D14642A47F01FC51.idx  main.cpp.B43EC76074C3A19B.idx  osrm_enriched.hpp.80FADC7432E3FDAC.idx  osrm_inspect.hpp.B9B728AB8DF7EF71.idx  params.hpp.388BA96B63B228B9.idx  params.hpp.EA98994E314FD912.idx  segmenter.cpp.70CE158FBB9F44CE.idx  segmenter.hpp.46827D98623041AA.idx
code/segmentation/engine/config/: settings.json
code/segmentation/engine/docker/: Dockerfile  deploy.sh
code/segmentation/engine/input/: test.json
code/segmentation/engine/settings/: config.yml
code/segmentation/engine/src/: http_server.cpp  http_server.hpp  main.cpp  map.txt
code/segmentation/engine/src/core/: ExistingSegmentMatcher.hpp  RouteSignalBuilder.cpp  RouteSignalBuilder.hpp  SegmentDB.hpp  SegmentUtils.cpp  SegmentUtils.hpp  \  segmenter.cpp  segmenter.hpp
code/segmentation/engine/src/core/wavelets/: RollingEnergyFFT.cpp  RollingEnergyFFT.hpp  WaveletFootprint.cpp  WaveletFootprint.hpp
code/segmentation/engine/src/debug/: SignalLab.cpp  SignalLab.hpp  json_debug.hpp  osrm_inspect.hpp
code/segmentation/engine/src/http/: http_handler.cpp  http_handler.hpp
code/segmentation/engine/src/infra/: MySQLSegmentDB.cpp  MySQLSegmentDB.hpp
code/segmentation/engine/src/javascript/: seg3d.js  signal_lab.css  signal_lab.html  signal_lab.js  view.js
code/segmentation/engine/src/models/: CoreTypes.hpp  MergeCostManager.hpp  OsrmResponse.hpp  SegStats.hpp  SegmentModel.hpp  osrm_enriched.hpp  params.hpp  segment.hpp
proposal/: proposal.aux  proposal.bbl  proposal.bib  proposal.blg  proposal.out  proposal.tex  researchQuestions.txt
research/: OSMFeatures.txt  methodology.txt
thesistext/: appendix_extracted_listings.tex  references.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.lot  thesis.out  thesis.patch  thesis.tex  thesis.toc
(+2882 files in other folders)
